--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@mdi/font": "^3.6.95",
         "core-js": "^3.6.4",
+        "jquery": "^3.5.1",
         "roboto-fontface": "*",
         "vue": "^2.6.11",
         "vue-router": "^3.1.6",
