Reorganize and add dialog + error dialog handling.

--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
                 "error",
                 4
             ],
-            "camelcase": "off"
+            "camelcase": "off",
+            "semi": "off",
+            "import/first": "off"
         }
     },
     "browserslist": [
