Rewrote entire routing logic.

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
             "camelcase": "off",
             "semi": "off",
             "import/first": "off",
-            "quote-props": "off"
+            "quote-props": "off",
+            "no-useless-return": "off"
         }
     },
     "browserslist": [
