--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:20.04
 
 # default is 'vircadia'
-ARG REPO=hasbegun
+ARG REPO=vircadia
 # default is 'master'
-ARG BRANCH=dev
+ARG BRANCH=master
 
 RUN apt update && apt install -y git curl
 RUN curl -sL https://deb.nodesource.com/setup_16.x -o nodesource_setup.sh && \
@@ -12,11 +12,6 @@ RUN curl -sL https://deb.nodesource.com/setup_16.x -o nodesource_setup.sh && \
     rm ./nodesource_setup.sh
 
 RUN npm install -g @vue/cli@latest
-
-##########
-# dev only
-# RUN apt update && apt install -y sudo vim
-##########
 
 # checkout repo
 RUN mkdir -p /usr/local/src && \
